// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries fetches all posts 1`] = `
Object {
  "data": Object {
    "posts": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'postModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches all users 1`] = `
Object {
  "data": Object {
    "users": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'userModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches single post 1`] = `
Object {
  "data": Object {
    "post": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'postModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches single user 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'userModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches the current user 1`] = `
Object {
  "data": Object {
    "me": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read property 'userModel' of undefined],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
